Use single quotes in the hashFiles expression

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         path: |
           ~/.gradle/loom-cache
           ~/.gradle/caches
-        key: gradle-${{hashFiles("**/*.gradle*")}}
+        key: gradle-${{hashFiles('**/*.gradle*')}}
         restore-keys: gradle-
     - name: Checkout
       uses: actions/checkout@v2
