--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ mod_version = 1.0.0
 org.gradle.jvmargs = -Xmx1G
 
 # Versions
-minecraft_version = 1.19.4
-yarn_mappings = 1.19.4+build.2
+minecraft_version = 1.20.4
+yarn_mappings = 1.20.4+build.3
 loader_version = 0.16.7
-fabric_version = 0.87.2+1.19.4
+fabric_version = 0.97.2+1.20.4
 
-plasmid_version = 0.5+1.19.4-SNAPSHOT
+plasmid_version = 0.5.102-SNAPSHOT+1.20.4
